--- a/frontend/src/Dispensor/menu.css
+++ b/frontend/src/Dispensor/menu.css
@@ -1,13 +1,15 @@
 menu {
-    width: 18%;
-    background: #19162c;
+    width: 250px;
+    /* background: #19162c; */
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid gray;
+    border-radius: .5em;
 }
 
 menu img{
-    width: 5.4em;
+    width: 4.4em;
     padding-top: 30px;
     border-radius: 8px;
 }
@@ -15,12 +17,12 @@ menu .menuItem{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 1.5em;
+    gap: 1.2em;
     
 }
 
 menu .menuItem  span{
-   color: aliceblue;
+   color:#b1147d;
 }
 
 menu ul{
@@ -55,16 +57,23 @@ menu ul li a:before{
     left: -10px;
     width: 0px;
     height: 20px;
-    background: #b1147d;
+    background: #3876f5;
     border-radius: 50%;
 }
 
-menu ul li:hover a ::before {
+menu ul li:hover a::before {
     width: 20px;
     transition:all 0.3s;
 }
 
 menu ul li.active a::before{
-    color: #b1147d;
+    color:#3876f5;
     transition :all 0.3s;
+}
+
+@media only screen and (max-width : 530px){
+    menu{
+        min-width: 73px;
+        width:73px;
+    }
 }
